# EventEdge

./: .gitignore  CMakeLists.txt  README.md
include/: event_probability.hpp  market_maker.hpp  order_book.hpp  trader_agents.hpp  types.hpp
python/: inventory_aware_experiment.py  markout_analysis.py  pnl_decomposition.py  run_experiments.py  settlement_drift_check.py
results/: markout_summary.csv  pnl_decomposition.csv
src/: event_probability.cpp  main.cpp  market_maker.cpp  order_book.cpp  trader_agents.cpp
tests/: test_eventedge.cpp
